test/files/neg/check-dead.check
check-dead.scala:7: error: dead code following this construct
  def z1 = y1(throw new Exception)  // should warn
              ^
check-dead.scala:10: error: dead code following this construct
  def z2 = y2(throw new Exception)  // should warn
              ^
check-dead.scala:29: error: dead code following this construct
    throw new Exception // should warn
    ^
check-dead.scala:33: error: dead code following this construct
    throw new Exception // should warn
    ^
four errors found
